# sgu-hack

./: .gitignore  README.md  docker-compose-dev.yaml
Backend/: Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt  test2.py
Backend/AI/: ai.py
Backend/db/: config.py  create_tables.py  db.py  schema.sql
Backend/handlers/: handler.go  handlers.py  models.go  storage.go  swaggerDis.py
Backend/handlers/db/: postgresql.go
Backend/middleware/: middleware.go
Backend/mongo/: mongo.py
Backend/pkg/client/postgreSQL/: postgreSQL.go
Backend/pkg/utils/jwt/: jwt.go
Frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
Frontend/front/: package-lock.json  package.json
Frontend/front/public/: index.html
Frontend/front/src/: index.tsx  style.css
Frontend/front/src/Pages/: Mean.tsx
Frontend/public/: index.html
Frontend/src/: App.tsx  index.tsx  style.css
Frontend/src/Pages/: Mean.tsx
Frontend/src/components/: LineChart.tsx  Modal.tsx  PieChart.tsx  Scatter.tsx  Table.tsx
Frontend/src/stores/: Modal.store.ts
Frontend/src/styled/: Base.styled.ts  Chart.styled.ts  Modal.style.ts  TableElements.styled.ts
Frontend/src/utils/: API.ts  Theme.ts
ML_backend/: .gitignore  prometheus.yml  promtail-config.yml  pyproject.toml
ML_backend/THIS_ML_EBAL_HACKS-main/: docker-compose-dev.yaml  docker-compose.yaml
ML_backend/THIS_ML_EBAL_HACKS-main/grafana/: datasources.yaml
ML_backend/app/: .dockerignore  Dockerfile.dev  main.py  models.py  monitoring_app.py  pyproject.toml
ML_backend/app/NN_models/: .gitignore  kmeans.py  network.py
ML_backend/app/models/: network.py
ML_backend/retraining/: Dockerfile.dev  data_torch.py  main.py  pyproject.toml
app/: main.py  pyproject.toml
(+17 files in other folders)
