[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Smoodust",email = "rustyburing@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai (>=1.7.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
