[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Tahionnn",email = "81324335+Tahionnn@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "onnxruntime (>=1.21.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
